--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<h1>Générateur de Qr code</h1>
+<h1>Générateur Qr code</h1>
 <div class="allThings">
   <label for="yourSite">Le lien de votre site :</label>
   <input type="text" id="yourSite" name="yourSite" placeholder="Le lien">
